# asr_app

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  GROQ_API_KEY.md  TROUBLESHOOTING.md  USER_GUIDE.md
installer/: build-installer.ps1  build-msi.ps1  license.rtf  release.ps1  voice_asr_client.nsi  voice_asr_client.wxs
src/: app.rs  audio.rs  autostart.rs  config.rs  events.rs  hotkey.rs  inject.rs  lib.rs  logger.rs  main.rs  secret.rs  settings.rs  stt.rs  tray.rs  win.rs
