[package]
name = "voice_asr_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = "0.4"
cpal = "0.15"
directories = "5"
hound = "3.5"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Security_Cryptography",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
